crates/proto-flow/tests/snapshots/regression__capture_request_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a150807 12117b22 73706563 223a2263| ......{"spec":"c 00000000
|6f6e6669 67227d12 19080712 157b2264| onfig"}......{"d 00000010
|6973636f 76657222 3a22636f 6e666967| iscover":"config 00000020
|227d1ae9 030a1076 616c6964 6174652f| "}.....validate/ 00000030
|63617074 75726510 071a157b 2276616c| capture....{"val 00000040
|69646174 65223a22 636f6e66 6967227d| idate":"config"} 00000050
|22ae030a 157b2272 65736f75 72636522| "....{"resource" 00000060
|3a22636f 6e666967 227d1292 030a1161| :"config"}.....a 00000070
|636d6543 6f2f636f 6c6c6563 74696f6e| cmeCo/collection 00000080
|1a082f6b 65792f6f 6e651a08 2f6b6579| ../key/one../key 00000090
|2f74776f 220b2f5f 6d657461 2f757569| /two"./_meta/uui 000000a0
|642a0474 7970652a 06726567 696f6e32| d*.type*.region2 000000b0
|710a092f 6a736f6e 2f707472 1207612d| q../json/ptr..a- 000000c0
|6669656c 64200132 590a0769 6e746567| field .2Y..integ 000000d0
|65720a06 73747269 6e671a13 1a037479| er..string....ty 000000e0
|70220464 61746530 b9603a03 656e6322| p".date0.`:.enc" 000000f0
|05746974 6c652a04 64657363 320e7b22| .title*.desc2.{" 00000100
|64656622 3a226175 6c74227d 40014a12| def":"ault"}@.J. 00000110
|09000000 00000045 c0110000 00000000| .......E........ 00000120
|1c403a0e 7b226163 6b223a22 74727565| .@:.{"ack":"true 00000130
|227d4212 7b227772 69746522 3a227363| "}B.{"write":"sc 00000140
|68656d61 227d4aa3 010a1270 61727469| hema"}J....parti 00000150
|74696f6e 2f74656d 706c6174 6510031a| tion/template... 00000160
|400a1e0a 0f657374 75617279 2e646576| @....estuary.dev 00000170
|2f666f6f 120b6c61 62656c2d 76616c75| /foo..label-valu 00000180
|650a1e0a 0f657374 75617279 2e646576| e....estuary.dev 00000190
|2f626172 120b6f74 6865722d 76616c75| /bar..other-valu 000001a0
|65224208 e9ec0610 031a1273 333a2f2f| e"B........s3:// 000001b0
|6275636b 65742f70 72656669 78220308| bucket/prefix".. 000001c0
|ac023207 083e1080 e59a773a 18506174| ..2..>....w:.Pat 000001d0
|687b7b50 6f737466 69782e54 656d706c| h{{Postfix.Templ 000001e0
|6174657d 7d300438 cfb0f501 5a117b22| ate}}0.8....Z.{" 000001f0
|72656164 223a2273 6368656d 61227d18| read":"schema"}. 00000200
|01320b31 313a3232 3a33333a 343422f2| .2.11:22:33:44". 00000210
|050ad505 0a0e6163 6d65436f 2f636170| ......acmeCo/cap 00000220
|74757265 10071a19 7b226361 70747572| ture....{"captur 00000230
|65223a7b 22636f6e 66696722 3a34327d| e":{"config":42} 00000240
|7d22d203 0a157b22 7265736f 75726365| }"....{"resource 00000250
|223a2263 6f6e6669 67227d12 04736f6d| ":"config"}..som 00000260
|65120470 6174681a 92030a11 61636d65| e..path.....acme 00000270
|436f2f63 6f6c6c65 6374696f 6e1a082f| Co/collection../ 00000280
|6b65792f 6f6e651a 082f6b65 792f7477| key/one../key/tw 00000290
|6f220b2f 5f6d6574 612f7575 69642a04| o"./_meta/uuid*. 000002a0
|74797065 2a067265 67696f6e 32710a09| type*.region2q.. 000002b0
|2f6a736f 6e2f7074 72120761 2d666965| /json/ptr..a-fie 000002c0
|6c642001 32590a07 696e7465 6765720a| ld .2Y..integer. 000002d0
|06737472 696e671a 131a0374 79702204| .string....typ". 000002e0
|64617465 30b9603a 03656e63 22057469| date0.`:.enc".ti 000002f0
|746c652a 04646573 63320e7b 22646566| tle*.desc2.{"def 00000300
|223a2261 756c7422 7d40014a 12090000| ":"ault"}@.J.... 00000310
|00000000 45c01100 00000000 001c403a| ....E.........@: 00000320
|0e7b2261 636b223a 22747275 65227d42| .{"ack":"true"}B 00000330
|127b2277 72697465 223a2273 6368656d| .{"write":"schem 00000340
|61227d4a a3010a12 70617274 6974696f| a"}J....partitio 00000350
|6e2f7465 6d706c61 74651003 1a400a1e| n/template...@.. 00000360
|0a0f6573 74756172 792e6465 762f666f| ..estuary.dev/fo 00000370
|6f120b6c 6162656c 2d76616c 75650a1e| o..label-value.. 00000380
|0a0f6573 74756172 792e6465 762f6261| ..estuary.dev/ba 00000390
|72120b6f 74686572 2d76616c 75652242| r..other-value"B 000003a0
|08e9ec06 10031a12 73333a2f 2f627563| ........s3://buc 000003b0
|6b65742f 70726566 69782203 08ac0232| ket/prefix"....2 000003c0
|07083e10 80e59a77 3a185061 74687b7b| ..>....w:.Path{{ 000003d0
|506f7374 6669782e 54656d70 6c617465| Postfix.Template 000003e0
|7d7d3004 38cfb0f5 015a117b 22726561| }}0.8....Z.{"rea 000003f0
|64223a22 73636865 6d61227d 20032a16| d":"schema"} .*. 00000400
|61253246 63646325 32467461 626c652b| a%2Fcdc%2Ftable+ 00000410
|62617a2e 763328ac 02328001 0a0e7368| baz.v3(..2....sh 00000420
|6172642f 74656d70 6c617465 1a0f7265| ard/template..re 00000430
|636f7665 72792f70 72656669 78220b68| covery/prefix".h 00000440
|696e742f 70726566 69782803 3202083c| int/prefix(.2..< 00000450
|48015240 0a1e0a0f 65737475 6172792e| H.R@....estuary. 00000460
|6465762f 666f6f12 0b6c6162 656c2d76| dev/foo..label-v 00000470
|616c7565 0a1e0a0f 65737475 6172792e| alue....estuary. 00000480
|6465762f 62617212 0b6f7468 65722d76| dev/bar..other-v 00000490
|616c7565 608cdc02 68e9ec06 3a380a11| alue`...h...:8.. 000004a0
|7265636f 76657279 2f74656d 706c6174| recovery/templat 000004b0
|65100322 21088080 4010041a 1473333a| e.."!...@....s3: 000004c0
|2f2f6275 636b6574 2f726563 6f766572| //bucket/recover 000004d0
|79220308 ac02420c 08903f12 05687474| y"....B...?..htt 000004e0
|70731801 420308a8 46120b31 313a3232| ps..B...F..11:22 000004f0
|3a33333a 34342a0b 30303a31 313a3232| :33:44*.00:11:22 00000500
|3a33332a 97060ad5 050a0e61 636d6543| :33*.......acmeC 00000510
|6f2f6361 70747572 6510071a 197b2263| o/capture....{"c 00000520
|61707475 7265223a 7b22636f 6e666967| apture":{"config 00000530
|223a3432 7d7d22d2 030a157b 22726573| ":42}}"....{"res 00000540
|6f757263 65223a22 636f6e66 6967227d| ource":"config"} 00000550
|1204736f 6d651204 70617468 1a92030a| ..some..path.... 00000560
|1161636d 65436f2f 636f6c6c 65637469| .acmeCo/collecti 00000570
|6f6e1a08 2f6b6579 2f6f6e65 1a082f6b| on../key/one../k 00000580
|65792f74 776f220b 2f5f6d65 74612f75| ey/two"./_meta/u 00000590
|7569642a 04747970 652a0672 6567696f| uid*.type*.regio 000005a0
|6e32710a 092f6a73 6f6e2f70 74721207| n2q../json/ptr.. 000005b0
|612d6669 656c6420 0132590a 07696e74| a-field .2Y..int 000005c0
|65676572 0a067374 72696e67 1a131a03| eger..string.... 000005d0
|74797022 04646174 6530b960 3a03656e| typ".date0.`:.en 000005e0
|63220574 69746c65 2a046465 7363320e| c".title*.desc2. 000005f0
|7b226465 66223a22 61756c74 227d4001| {"def":"ault"}@. 00000600
|4a120900 00000000 0045c011 00000000| J........E...... 00000610
|00001c40 3a0e7b22 61636b22 3a227472| ...@:.{"ack":"tr 00000620
|7565227d 42127b22 77726974 65223a22| ue"}B.{"write":" 00000630
|73636865 6d61227d 4aa3010a 12706172| schema"}J....par 00000640
|74697469 6f6e2f74 656d706c 61746510| tition/template. 00000650
|031a400a 1e0a0f65 73747561 72792e64| ..@....estuary.d 00000660
|65762f66 6f6f120b 6c616265 6c2d7661| ev/foo..label-va 00000670
|6c75650a 1e0a0f65 73747561 72792e64| lue....estuary.d 00000680
|65762f62 6172120b 6f746865 722d7661| ev/bar..other-va 00000690
|6c756522 4208e9ec 0610031a 1273333a| lue"B........s3: 000006a0
|2f2f6275 636b6574 2f707265 66697822| //bucket/prefix" 000006b0
|0308ac02 3207083e 1080e59a 773a1850| ....2..>....w:.P 000006c0
|6174687b 7b506f73 74666978 2e54656d| ath{{Postfix.Tem 000006d0
|706c6174 657d7d30 0438cfb0 f5015a11| plate}}0.8....Z. 000006e0
|7b227265 6164223a 22736368 656d6122| {"read":"schema" 000006f0
|7d20032a 16612532 46636463 25324674| } .*.a%2Fcdc%2Ft 00000700
|61626c65 2b62617a 2e763328 ac023280| able+baz.v3(..2. 00000710
|010a0e73 68617264 2f74656d 706c6174| ...shard/templat 00000720
|651a0f72 65636f76 6572792f 70726566| e..recovery/pref 00000730
|6978220b 68696e74 2f707265 66697828| ix".hint/prefix( 00000740
|03320208 3c480152 400a1e0a 0f657374| .2..<H.R@....est 00000750
|75617279 2e646576 2f666f6f 120b6c61| uary.dev/foo..la 00000760
|62656c2d 76616c75 650a1e0a 0f657374| bel-value....est 00000770
|75617279 2e646576 2f626172 120b6f74| uary.dev/bar..ot 00000780
|6865722d 76616c75 65608cdc 0268e9ec| her-value`...h.. 00000790
|063a380a 11726563 6f766572 792f7465| .:8..recovery/te 000007a0
|6d706c61 74651003 22210880 80401004| mplate.."!...@.. 000007b0
|1a147333 3a2f2f62 75636b65 742f7265| ..s3://bucket/re 000007c0
|636f7665 72792203 08ac0242 0c08903f| covery"....B...? 000007d0
|12056874 74707318 01420308 a846120b| ..https..B...F.. 000007e0
|31313a32 323a3333 3a34341a 14153322| 11:22:33:44...3" 000007f0
|11001d77 66554425 bbaa9988 2dffeedd| ...wfUD%....-... 00000800
|cc221a7b 22636f6e 6e656374 6f72223a| .".{"connector": 00000810
|7b227374 61746522 3a34327d 7d320208| {"state":42}}2.. 00000820
|20a20606 12024869 1801|               .....Hi..       00000830
                                                       0000083a
