crates/proto-flow/tests/snapshots/regression__capture_spec_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a0e6163 6d65436f 2f636170 74757265| ..acmeCo/capture 00000000
|10071a19 7b226361 70747572 65223a7b| ....{"capture":{ 00000010
|22636f6e 66696722 3a34327d 7d22d203| "config":42}}".. 00000020
|0a157b22 7265736f 75726365 223a2263| ..{"resource":"c 00000030
|6f6e6669 67227d12 04736f6d 65120470| onfig"}..some..p 00000040
|6174681a 92030a11 61636d65 436f2f63| ath.....acmeCo/c 00000050
|6f6c6c65 6374696f 6e1a082f 6b65792f| ollection../key/ 00000060
|6f6e651a 082f6b65 792f7477 6f220b2f| one../key/two"./ 00000070
|5f6d6574 612f7575 69642a04 74797065| _meta/uuid*.type 00000080
|2a067265 67696f6e 32710a09 2f6a736f| *.region2q../jso 00000090
|6e2f7074 72120761 2d666965 6c642001| n/ptr..a-field . 000000a0
|32590a07 696e7465 6765720a 06737472| 2Y..integer..str 000000b0
|696e671a 131a0374 79702204 64617465| ing....typ".date 000000c0
|30b9603a 03656e63 22057469 746c652a| 0.`:.enc".title* 000000d0
|04646573 63320e7b 22646566 223a2261| .desc2.{"def":"a 000000e0
|756c7422 7d40014a 12090000 00000000| ult"}@.J........ 000000f0
|45c01100 00000000 001c403a 0e7b2261| E.........@:.{"a 00000100
|636b223a 22747275 65227d42 127b2277| ck":"true"}B.{"w 00000110
|72697465 223a2273 6368656d 61227d4a| rite":"schema"}J 00000120
|a3010a12 70617274 6974696f 6e2f7465| ....partition/te 00000130
|6d706c61 74651003 1a400a1e 0a0f6573| mplate...@....es 00000140
|74756172 792e6465 762f666f 6f120b6c| tuary.dev/foo..l 00000150
|6162656c 2d76616c 75650a1e 0a0f6573| abel-value....es 00000160
|74756172 792e6465 762f6261 72120b6f| tuary.dev/bar..o 00000170
|74686572 2d76616c 75652242 08e9ec06| ther-value"B.... 00000180
|10031a12 73333a2f 2f627563 6b65742f| ....s3://bucket/ 00000190
|70726566 69782203 08ac0232 07083e10| prefix"....2..>. 000001a0
|80e59a77 3a185061 74687b7b 506f7374| ...w:.Path{{Post 000001b0
|6669782e 54656d70 6c617465 7d7d3004| fix.Template}}0. 000001c0
|38cfb0f5 015a117b 22726561 64223a22| 8....Z.{"read":" 000001d0
|73636865 6d61227d 20032a16 61253246| schema"} .*.a%2F 000001e0
|63646325 32467461 626c652b 62617a2e| cdc%2Ftable+baz. 000001f0
|763328ac 02328001 0a0e7368 6172642f| v3(..2....shard/ 00000200
|74656d70 6c617465 1a0f7265 636f7665| template..recove 00000210
|72792f70 72656669 78220b68 696e742f| ry/prefix".hint/ 00000220
|70726566 69782803 3202083c 48015240| prefix(.2..<H.R@ 00000230
|0a1e0a0f 65737475 6172792e 6465762f| ....estuary.dev/ 00000240
|666f6f12 0b6c6162 656c2d76 616c7565| foo..label-value 00000250
|0a1e0a0f 65737475 6172792e 6465762f| ....estuary.dev/ 00000260
|62617212 0b6f7468 65722d76 616c7565| bar..other-value 00000270
|608cdc02 68e9ec06 3a380a11 7265636f| `...h...:8..reco 00000280
|76657279 2f74656d 706c6174 65100322| very/template.." 00000290
|21088080 4010041a 1473333a 2f2f6275| !...@....s3://bu 000002a0
|636b6574 2f726563 6f766572 79220308| cket/recovery".. 000002b0
|ac02420c 08903f12 05687474 70731801| ..B...?..https.. 000002c0
|420308a8 46|                         B...F            000002d0
                                                       000002d5
