crates/proto-flow/tests/snapshots/regression__collection_spec_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a116163 6d65436f 2f636f6c 6c656374| ..acmeCo/collect 00000000
|696f6e1a 082f6b65 792f6f6e 651a082f| ion../key/one../ 00000010
|6b65792f 74776f22 0b2f5f6d 6574612f| key/two"./_meta/ 00000020
|75756964 2a047479 70652a06 72656769| uuid*.type*.regi 00000030
|6f6e3271 0a092f6a 736f6e2f 70747212| on2q../json/ptr. 00000040
|07612d66 69656c64 20013259 0a07696e| .a-field .2Y..in 00000050
|74656765 720a0673 7472696e 671a131a| teger..string... 00000060
|03747970 22046461 746530b9 603a0365| .typ".date0.`:.e 00000070
|6e632205 7469746c 652a0464 65736332| nc".title*.desc2 00000080
|0e7b2264 6566223a 2261756c 74227d40| .{"def":"ault"}@ 00000090
|014a1209 00000000 000045c0 11000000| .J........E..... 000000a0
|0000001c 403a0e7b 2261636b 223a2274| ....@:.{"ack":"t 000000b0
|72756522 7d42127b 22777269 7465223a| rue"}B.{"write": 000000c0
|22736368 656d6122 7d4aa301 0a127061| "schema"}J....pa 000000d0
|72746974 696f6e2f 74656d70 6c617465| rtition/template 000000e0
|10031a40 0a1e0a0f 65737475 6172792e| ...@....estuary. 000000f0
|6465762f 666f6f12 0b6c6162 656c2d76| dev/foo..label-v 00000100
|616c7565 0a1e0a0f 65737475 6172792e| alue....estuary. 00000110
|6465762f 62617212 0b6f7468 65722d76| dev/bar..other-v 00000120
|616c7565 224208e9 ec061003 1a127333| alue"B........s3 00000130
|3a2f2f62 75636b65 742f7072 65666978| ://bucket/prefix 00000140
|220308ac 02320708 3e1080e5 9a773a18| "....2..>....w:. 00000150
|50617468 7b7b506f 73746669 782e5465| Path{{Postfix.Te 00000160
|6d706c61 74657d7d 300438cf b0f5015a| mplate}}0.8....Z 00000170
|117b2272 65616422 3a227363 68656d61| .{"read":"schema 00000180
|227d|                                "}               00000190
                                                       00000192
