crates/proto-flow/tests/snapshots/regression__derivation_spec_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a116163 6d65436f 2f636f6c 6c656374| ..acmeCo/collect 00000000
|696f6e1a 082f6b65 792f6f6e 651a082f| ion../key/one../ 00000010
|6b65792f 74776f22 0b2f5f6d 6574612f| key/two"./_meta/ 00000020
|75756964 2a047479 70652a06 72656769| uuid*.type*.regi 00000030
|6f6e3271 0a092f6a 736f6e2f 70747212| on2q../json/ptr. 00000040
|07612d66 69656c64 20013259 0a07696e| .a-field .2Y..in 00000050
|74656765 720a0673 7472696e 671a131a| teger..string... 00000060
|03747970 22046461 746530b9 603a0365| .typ".date0.`:.e 00000070
|6e632205 7469746c 652a0464 65736332| nc".title*.desc2 00000080
|0e7b2264 6566223a 2261756c 74227d40| .{"def":"ault"}@ 00000090
|014a1209 00000000 000045c0 11000000| .J........E..... 000000a0
|0000001c 403a0e7b 2261636b 223a2274| ....@:.{"ack":"t 000000b0
|72756522 7d42127b 22777269 7465223a| rue"}B.{"write": 000000c0
|22736368 656d6122 7d4aa301 0a127061| "schema"}J....pa 000000d0
|72746974 696f6e2f 74656d70 6c617465| rtition/template 000000e0
|10031a40 0a1e0a0f 65737475 6172792e| ...@....estuary. 000000f0
|6465762f 666f6f12 0b6c6162 656c2d76| dev/foo..label-v 00000100
|616c7565 0a1e0a0f 65737475 6172792e| alue....estuary. 00000110
|6465762f 62617212 0b6f7468 65722d76| dev/bar..other-v 00000120
|616c7565 224208e9 ec061003 1a127333| alue"B........s3 00000130
|3a2f2f62 75636b65 742f7072 65666978| ://bucket/prefix 00000140
|220308ac 02320708 3e1080e5 9a773a18| "....2..>....w:. 00000150
|50617468 7b7b506f 73746669 782e5465| Path{{Postfix.Te 00000160
|6d706c61 74657d7d 300438cf b0f5015a| mplate}}0.8....Z 00000170
|117b2272 65616422 3a227363 68656d61| .{"read":"schema 00000180
|227d62de 06080112 1c7b2264 65726976| "}b......{"deriv 00000190
|6174696f 6e223a7b 22636f6e 66696722| ation":{"config" 000001a0
|3a34327d 7d1ae704 0a0e7472 616e7366| :42}}.....transf 000001b0
|6f726d5f 6e616d65 1292030a 1161636d| orm_name.....acm 000001c0
|65436f2f 636f6c6c 65637469 6f6e1a08| eCo/collection.. 000001d0
|2f6b6579 2f6f6e65 1a082f6b 65792f74| /key/one../key/t 000001e0
|776f220b 2f5f6d65 74612f75 7569642a| wo"./_meta/uuid* 000001f0
|04747970 652a0672 6567696f 6e32710a| .type*.region2q. 00000200
|092f6a73 6f6e2f70 74721207 612d6669| ./json/ptr..a-fi 00000210
|656c6420 0132590a 07696e74 65676572| eld .2Y..integer 00000220
|0a067374 72696e67 1a131a03 74797022| ..string....typ" 00000230
|04646174 6530b960 3a03656e 63220574| .date0.`:.enc".t 00000240
|69746c65 2a046465 7363320e 7b226465| itle*.desc2.{"de 00000250
|66223a22 61756c74 227d4001 4a120900| f":"ault"}@.J... 00000260
|00000000 0045c011 00000000 00001c40| .....E.........@ 00000270
|3a0e7b22 61636b22 3a227472 7565227d| :.{"ack":"true"} 00000280
|42127b22 77726974 65223a22 73636865| B.{"write":"sche 00000290
|6d61227d 4aa3010a 12706172 74697469| ma"}J....partiti 000002a0
|6f6e2f74 656d706c 61746510 031a400a| on/template...@. 000002b0
|1e0a0f65 73747561 72792e64 65762f66| ...estuary.dev/f 000002c0
|6f6f120b 6c616265 6c2d7661 6c75650a| oo..label-value. 000002d0
|1e0a0f65 73747561 72792e64 65762f62| ...estuary.dev/b 000002e0
|6172120b 6f746865 722d7661 6c756522| ar..other-value" 000002f0
|4208e9ec 0610031a 1273333a 2f2f6275| B........s3://bu 00000300
|636b6574 2f707265 66697822 0308ac02| cket/prefix".... 00000310
|3207083e 1080e59a 773a1850 6174687b| 2..>....w:.Path{ 00000320
|7b506f73 74666978 2e54656d 706c6174| {Postfix.Templat 00000330
|657d7d30 0438cfb0 f5015a11 7b227265| e}}0.8....Z.{"re 00000340
|6164223a 22736368 656d6122 7d1a420a| ad":"schema"}.B. 00000350
|400a1e0a 0f657374 75617279 2e646576| @....estuary.dev 00000360
|2f666f6f 120b6c61 62656c2d 76616c75| /foo..label-valu 00000370
|650a1e0a 0f657374 75617279 2e646576| e....estuary.dev 00000380
|2f626172 120b6f74 6865722d 76616c75| /bar..other-valu 00000390
|65200128 0e32082f 73687566 666c6532| e .(.2./shuffle2 000003a0
|042f6b65 793a1822 53454c45 43542024| ./key:."SELECT $ 000003b0
|73687566 666c652c 20246b65 793b2242| shuffle, $key;"B 000003c0
|137b226c 616d6264 61223a22 636f6e66| .{"lambda":"conf 000003d0
|6967227d 48015225 64657269 76652f61| ig"}H.R%derive/a 000003e0
|2f636f6c 6c656374 696f6e2f 7472616e| /collection/tran 000003f0
|73666f72 6d5f6e61 6d652e76 325a0608| sform_name.v2Z.. 00000400
|cbc8d6a6 06620608 80888ba1 06680222| .....b.......h." 00000410
|0203022a 80010a0e 73686172 642f7465| ...*....shard/te 00000420
|6d706c61 74651a0f 7265636f 76657279| mplate..recovery 00000430
|2f707265 66697822 0b68696e 742f7072| /prefix".hint/pr 00000440
|65666978 28033202 083c4801 52400a1e| efix(.2..<H.R@.. 00000450
|0a0f6573 74756172 792e6465 762f666f| ..estuary.dev/fo 00000460
|6f120b6c 6162656c 2d76616c 75650a1e| o..label-value.. 00000470
|0a0f6573 74756172 792e6465 762f6261| ..estuary.dev/ba 00000480
|72120b6f 74686572 2d76616c 7565608c| r..other-value`. 00000490
|dc0268e9 ec063238 0a117265 636f7665| ..h...28..recove 000004a0
|72792f74 656d706c 61746510 03222108| ry/template.."!. 000004b0
|80804010 041a1473 333a2f2f 6275636b| ..@....s3://buck 000004c0
|65742f72 65636f76 65727922 0308ac02| et/recovery".... 000004d0
|3a0c0890 3f120568 74747073 18013a03| :...?..https..:. 000004e0
|08a846|                              ..F              000004f0
                                                       000004f3
